--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,4 @@
-appdirs==1.4.4
-atomicwrites==1.4.0
-attrs==21.2.0
-black==21.5b1
-certifi==2020.12.5
-chardet==4.0.0
-click==8.0.1
-colorama==0.4.4
 Flask==2.0.1
-Flask-WTF==0.14.3
-idna==2.10
-iniconfig==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-mypy-extensions==0.4.3
-packaging==20.9
-pathspec==0.8.1
-pluggy==0.13.1
-py==1.10.0
-pyparsing==2.4.7
 pytest==6.2.4
-regex==2021.4.4
 requests==2.25.1
-toml==0.10.2
-urllib3==1.26.4
-Werkzeug==2.0.1
-WTForms==2.3.3
+python-dotenv==0.17.1
